--- a/BananaCollector/train.ipynb
+++ b/BananaCollector/train.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "### 1. Start the Environment\n",
     "\n",
-    "We begin by importing some necessary packages.  If the code cell below returns an error, please revisit the project instructions to double-check that you have installed [Unity ML-Agents](https://github.com/Unity-Technologies/ml-agents/blob/master/docs/Installation.md) and [NumPy](http://www.numpy.org/) or any other necessary packages."
+    "We begin by importing some necessary packages.  If the code cell below returns an error, please revisit the project instructions to double-check that you have installed necessary packages."
    ]
   },
   {
@@ -21,72 +21,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from unityagents import UnityEnvironment\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "import sys\n",
     "sys.path.append('../')\n",
+    "\n",
+    "from unityagents import UnityEnvironment\n",
+    "from agents.dqn_agent import Agent\n",
+    "from collections import deque\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import config \n",
+    "import pprint\n",
     "import torch"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "import os.path\n",
+    "env = UnityEnvironment(file_name=\"Banana_Linux/Banana.x86_64\")\n",
     "\n",
-    "home_dir    = os.path.expanduser(\"~\")\n",
-    "project_dir = os.path.join(os.path.sep, home_dir, \"Documents\", \"MyPrograms\", \"rl\", \"BananaCollector\")\n",
-    "file_name   = \"Banana_Linux/Banana.x86\"\n",
-    "\n",
-    "full_path = os.path.join(os.path.sep, project_dir, file_name)\n",
-    "\n",
-    "\n",
-    "print(\"Launching Unity from: %s\"%full_path)\n",
-    "\n",
-    "env = UnityEnvironment(file_name=full_path)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# get the default brain\n",
     "brain_name = env.brain_names[0]\n",
     "brain = env.brains[brain_name]\n",
     "\n",
     "# reset the environment\n",
-    "env_info = env.reset(train_mode=True)[brain_name]\n",
-    "\n",
-    "# number of agents in the environment\n",
-    "print('Number of agents:', len(env_info.agents))\n",
-    "\n",
-    "# number of actions\n",
-    "action_size = brain.vector_action_space_size\n",
-    "print('Number of actions:', action_size)\n",
-    "\n",
-    "# examine the state space \n",
-    "state = env_info.vector_observations[0]\n",
-    "print('States look like:', state)\n",
-    "state_size = len(state)\n",
-    "print('States have length:', state_size)"
+    "env_info = env.reset(train_mode=True)[brain_name]\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Train DQN agent!\n",
+    "### 2. Configure  and create instance of DQN agent\n",
     "\n",
-    "Now it's your turn to train your own agent to solve the environment!  When training the environment, set `train_mode=True`, so that the line for resetting the environment looks like the following:\n",
-    "```python\n",
-    "env_info = env.reset(train_mode=True)[brain_name]\n",
-    "```"
+    "DQN agent's hyperparameters are saved and loaded from config.py file. Current values are result of coarse hyperparameter tuing. Feel free to try different hyperparameter values. "
    ]
   },
   {
@@ -95,12 +69,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from agents.dqn_agent import Agent\n",
-    "from collections import deque\n",
-    "import config \n",
+    "# Load parameters from file\n",
+    "params = config.HYPERPARAMS\n",
+    "print(\"Creating DQN agent with following hyperparameter values:\")\n",
+    "pprint.pprint(params)\n",
     "\n",
-    "param = config.HYPERPARAMS\n",
-    "agent = Agent(state_size=state_size, action_size=action_size, seed=0)\n"
+    "# Create DQN agent instance\n",
+    "agent = Agent(params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Train DQN agent!"
    ]
   },
   {
@@ -109,77 +91,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dqn(n_episodes=2000, max_t=2000, eps_start=1.0, eps_end=0.01, eps_decay=0.995):\n",
-    "    \"\"\"Deep Q-Learning.\n",
-    "    \n",
-    "    Params\n",
-    "    ======\n",
-    "        n_episodes (int): maximum number of training episodes\n",
-    "        max_t (int): maximum number of timesteps per episode\n",
-    "        eps_start (float): starting value of epsilon, for epsilon-greedy action selection\n",
-    "        eps_end (float): minimum value of epsilon\n",
-    "        eps_decay (float): multiplicative factor (per episode) for decreasing epsilon\n",
-    "    \"\"\"\n",
-    "    scores = []                        # list containing scores from each episode\n",
-    "    scores_window = deque(maxlen=100)  # last 100 scores\n",
-    "    eps = eps_start                    # initialize epsilon\n",
-    "    for i_episode in range(1, n_episodes+1):\n",
-    "        # Reset environment\n",
-    "        env_info = env.reset(train_mode=True)[brain_name]\n",
-    "        \n",
-    "        # Observe current state\n",
-    "        state = env_info.vector_observations[0]  \n",
-    "        \n",
-    "        # Reset score and done flag\n",
-    "        score = 0\n",
-    "        done = False\n",
-    "        \n",
-    "        # Loop each episode\n",
-    "        while not done:\n",
-    "            \n",
-    "            # Select action with e-greedy policy\n",
-    "            action = agent.act(state, eps)\n",
-    "            \n",
-    "            # Take action\n",
-    "            env_info = env.step(action)[brain_name]  \n",
-    "            \n",
-    "            # Observe the next state\n",
-    "            next_state = env_info.vector_observations[0]   \n",
-    "            \n",
-    "            # Get the reward\n",
-    "            reward = env_info.rewards[0]       \n",
-    "            \n",
-    "            # Check if episode is finished\n",
-    "            done = env_info.local_done[0]  \n",
-    "            \n",
-    "            # Store experience\n",
-    "            agent.step(state, action, reward, next_state, done)\n",
-    "            \n",
-    "            # State transition\n",
-    "            state = next_state\n",
-    "            \n",
-    "            # Update total score\n",
-    "            score += reward\n",
-    "            \n",
-    "        # Save most recent score   \n",
-    "        scores_window.append(score)\n",
-    "        scores.append(score)\n",
-    "        \n",
-    "        # Decay epsilon\n",
-    "        eps = max(eps_end, eps_decay*eps) \n",
-    "        \n",
-    "        # Print learning progress\n",
-    "        print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)), end=\"\")\n",
-    "        if i_episode % 100 == 0:\n",
-    "            print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)))\n",
-    "        if np.mean(scores_window)>=13.0:\n",
-    "            print('\\nEnvironment solved in {:d} episodes!\\tAverage Score: {:.2f}'.format(i_episode-100, np.mean(scores_window)))\n",
-    "            torch.save(agent.qnetwork_local.state_dict(), 'models/checkpoint.pth')\n",
-    "            break\n",
-    "            \n",
-    "    return scores\n",
+    "# Maximum number of training episodes\n",
+    "n_episodes = params['n_episodes']\n",
+    "# Initialize epsilon\n",
+    "epsilon = params['epsilon_start']\n",
+    "# List containing scores from each episode\n",
+    "scores = []\n",
+    "# Store last 100 scores\n",
+    "scores_window = deque(maxlen=params['scores_window_size'])\n",
     "\n",
-    "scores = dqn()"
+    "# Train loop\n",
+    "for i_episode in range(1, n_episodes+1):\n",
+    "    # Reset environment\n",
+    "    env_info = env.reset(train_mode=True)[brain_name]\n",
+    "\n",
+    "    # Observe current state\n",
+    "    state = env_info.vector_observations[0]\n",
+    "\n",
+    "    # Reset score and done flag\n",
+    "    score = 0\n",
+    "    done = False\n",
+    "\n",
+    "    # Loop each episode\n",
+    "    while not done:\n",
+    "\n",
+    "        # Select action with e-greedy policy\n",
+    "        action = agent.act(state, epsilon)\n",
+    "\n",
+    "        # Take action\n",
+    "        env_info = env.step(action)[brain_name]\n",
+    "\n",
+    "        # Observe the next state\n",
+    "        next_state = env_info.vector_observations[0]\n",
+    "\n",
+    "        # Get the reward\n",
+    "        reward = env_info.rewards[0]\n",
+    "\n",
+    "        # Check if episode is finished\n",
+    "        done = env_info.local_done[0]\n",
+    "\n",
+    "        # Store experience\n",
+    "        agent.step(state, action, reward, next_state, done)\n",
+    "\n",
+    "        # State transition\n",
+    "        state = next_state\n",
+    "\n",
+    "        # Update total score\n",
+    "        score += reward\n",
+    "\n",
+    "    # Save most recent score\n",
+    "    scores_window.append(score)\n",
+    "    scores.append(score, np.mean(scores_window))\n",
+    "\n",
+    "    # Decay epsilon\n",
+    "    epsilon = max(params['epsilon_final'], params['epsilon_decay']*epsilon)\n",
+    "\n",
+    "    # Print learning progress\n",
+    "    print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)), end=\"\")\n",
+    "    if i_episode % 100 == 0:\n",
+    "        print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)))\n",
+    "    if np.mean(scores_window)>=13.0:\n",
+    "        print('\\nEnvironment solved in {:d} episodes!\\tAverage Score: {:.2f}'.format(i_episode-100, np.mean(scores_window)))\n",
+    "        torch.save(agent.qnetwork_local.state_dict(), 'models/checkpoint.pth')\n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Plot score"
    ]
   },
   {
@@ -188,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot the scores\n",
+    "# Plot the scores\n",
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(111)\n",
     "plt.plot(np.arange(len(scores)), scores)\n",
@@ -203,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# close the environment\n",
+    "# Close the environment\n",
     "env.close()"
    ]
   }
