Add plotting features
Plot every episode's scores obtained during training.
Save scores obtained during training to csv file in scores folder.
Save the plot to image file in graphs folder.

--- a/BananaCollector/train.ipynb
+++ b/BananaCollector/train.ipynb
@@ -141,7 +141,7 @@
     "\n",
     "    # Save most recent score\n",
     "    scores_window.append(score)\n",
-    "    scores.append(score, np.mean(scores_window))\n",
+    "    scores.append([score, np.mean(scores_window)])\n",
     "\n",
     "    # Decay epsilon\n",
     "    epsilon = max(params['epsilon_final'], params['epsilon_decay']*epsilon)\n",
@@ -169,12 +169,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot the scores\n",
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111)\n",
-    "plt.plot(np.arange(len(scores)), scores)\n",
+    "# Save score\n",
+    "df = pd.DataFrame(scores,columns=['scores','average_scores'])\n",
+    "df.to_csv('scores/dqn.csv')\n",
+    "\n",
+    "# Plot scores\n",
+    "plt.figure(figsize=(10,5))\n",
+    "plt.axhline(13, color='red', lw=1, alpha=0.3)\n",
+    "plt.plot( df.index, 'scores', data=df, color='lime', lw=1, label=\"score\", alpha=0.4)\n",
+    "plt.plot( df.index, 'average_scores', data=df, color='green', lw=2, label=\"average score\")\n",
+    "# Set labels and legends\n",
+    "plt.xlabel('Episode')\n",
+    "plt.xlim(0, len(df.index))\n",
+    "plt.xticks(50*np.arange(int(len(df.index)/50+1)))\n",
     "plt.ylabel('Score')\n",
-    "plt.xlabel('Episode #')\n",
+    "plt.yticks(3*np.arange(8))\n",
+    "plt.title('DQN agent')\n",
+    "plt.grid(True, alpha=0.3, linestyle='--')\n",
+    "plt.legend()\n",
+    "# Save figure\n",
+    "plt.savefig('graphs/dqn.png', bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
