--- a/BananaCollector/test.ipynb
+++ b/BananaCollector/test.ipynb
@@ -44,7 +44,7 @@
     "params = config.HYPERPARAMS\n",
     "\n",
     "# Create DQN agent instance\n",
-    "agent = Agent(params)\n",
+    "agent = AgentDQN(params)\n",
     "\n",
     "# Load learned model weight\n",
     "agent.qnetwork_local.load_state_dict(torch.load('models/checkpoint.pth'))"
