--- a/BananaCollector/train.ipynb
+++ b/BananaCollector/train.ipynb
@@ -75,7 +75,7 @@
     "pprint.pprint(params)\n",
     "\n",
     "# Create DQN agent instance\n",
-    "agent = Agent(params)"
+    "agent = AgentDQN(params)"
    ]
   },
   {
