Use hyperparameter values in filenames
Use tunable hyperparameter values in output files' name.
Change structure of config.py to include separate parameter values
for each agents and environment.

--- a/BananaCollector/train.ipynb
+++ b/BananaCollector/train.ipynb
@@ -25,7 +25,7 @@
     "sys.path.append('../')\n",
     "\n",
     "from unityagents import UnityEnvironment\n",
-    "from agents.dqn_agent import Agent\n",
+    "#from agents import *\n",
     "from collections import deque\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -69,13 +69,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load parameters from file\n",
-    "params = config.HYPERPARAMS\n",
-    "print(\"Creating DQN agent with following hyperparameter values:\")\n",
-    "pprint.pprint(params)\n",
+    "from agents.ddqn_agent import DDQN\n",
     "\n",
-    "# Create DQN agent instance\n",
-    "agent = AgentDQN(params)"
+    "# Load parameters from file\n",
+    "hparams = config.HYPERPARAMS['DDQN']\n",
+    "params = config.TRAINPARAMS['BananaCollector']\n",
+    "\n",
+    "# Create agent instance\n",
+    "agent = DDQN(hparams)\n",
+    "print(\"Created agent with following hyperparameter values:\")\n",
+    "pprint.pprint(hparams)"
    ]
   },
   {
@@ -148,11 +151,14 @@
     "\n",
     "    # Print learning progress\n",
     "    print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)), end=\"\")\n",
-    "    if i_episode % 100 == 0:\n",
+    "    if i_episode % params['scores_window_size'] == 0:\n",
     "        print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)))\n",
-    "    if np.mean(scores_window)>=13.0:\n",
+    "    if np.mean(scores_window)>=params['solve_score']:\n",
     "        print('\\nEnvironment solved in {:d} episodes!\\tAverage Score: {:.2f}'.format(i_episode-100, np.mean(scores_window)))\n",
-    "        torch.save(agent.qnetwork_local.state_dict(), 'models/checkpoint.pth')\n",
+    "        # Filename string\n",
+    "        filename = \"{:s}_lr{:.1E}_batch{:d}_model{:d}x{:d}_solved{:d}\"\n",
+    "        filename = filename.format(hparams['name'], hparams['learning_rate'], hparams['batch_size'], hparams['fc1_units'], hparams['fc2_units'], i_episode-100)\n",
+    "        torch.save(agent.qnetwork_local.state_dict(), 'models/{:s}.tph'.format(filename))\n",
     "        break\n"
    ]
   },
@@ -166,12 +172,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Save score\n",
     "df = pd.DataFrame(scores,columns=['scores','average_scores'])\n",
-    "df.to_csv('scores/dqn.csv')\n",
+    "df.to_csv('scores/{:s}.csv'.format(filename))\n",
     "\n",
     "# Plot scores\n",
     "plt.figure(figsize=(10,5))\n",
