--- a/BananaCollector/test.ipynb
+++ b/BananaCollector/test.ipynb
@@ -44,7 +44,7 @@
     "params = config.HYPERPARAMS\n",
     "\n",
     "# Create DQN agent instance\n",
-    "agent = AgentDQN(params)\n",
+    "agent = Agent(params)\n",
     "\n",
     "# Load learned model weight\n",
     "agent.qnetwork_local.load_state_dict(torch.load('models/checkpoint.pth'))"
@@ -119,7 +119,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -130,5 +130,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
