Fix typos in filenames
Fix typo in output model filename
Fix typo in output plot image filename

--- a/BananaCollector/train.ipynb
+++ b/BananaCollector/train.ipynb
@@ -158,7 +158,7 @@
     "        # Filename string\n",
     "        filename = \"{:s}_lr{:.1E}_batch{:d}_model{:d}x{:d}_solved{:d}\"\n",
     "        filename = filename.format(hparams['name'], hparams['learning_rate'], hparams['batch_size'], hparams['fc1_units'], hparams['fc2_units'], i_episode-100)\n",
-    "        torch.save(agent.qnetwork_local.state_dict(), 'models/{:s}.tph'.format(filename))\n",
+    "        torch.save(agent.qnetwork_local.state_dict(), 'models/{:s}.pth'.format(filename))\n",
     "        break\n"
    ]
   },
@@ -196,7 +196,7 @@
     "plt.grid(True, alpha=0.3, linestyle='--')\n",
     "plt.legend()\n",
     "# Save figure\n",
-    "plt.savefig('graphs/dqn.png', bbox_inches='tight')\n",
+    "plt.savefig('graphs/{:s}.png'.format(filename), bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
