--- a/Reacher/Continuous_Control.ipynb
+++ b/Reacher/Continuous_Control.ipynb
@@ -4,72 +4,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Continuous Control\n",
+    "# Reacher\n",
     "\n",
     "---\n",
     "\n",
-    "In this notebook, you will learn how to use the Unity ML-Agents environment for the second project of the [Deep Reinforcement Learning Nanodegree](https://www.udacity.com/course/deep-reinforcement-learning-nanodegree--nd893) program.\n",
+    "In this notebook, we will train DDPG agent to navigate robotic manipulator.\n",
     "\n",
     "### 1. Start the Environment\n",
     "\n",
-    "We begin by importing the necessary packages.  If the code cell below returns an error, please revisit the project instructions to double-check that you have installed [Unity ML-Agents](https://github.com/Unity-Technologies/ml-agents/blob/master/docs/Installation.md) and [NumPy](http://www.numpy.org/)."
+    "We begin by importing the necessary packages."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:unityagents:\n",
+      "'Academy' started successfully!\n",
+      "Unity Academy name: Academy\n",
+      "        Number of Brains: 1\n",
+      "        Number of External Brains : 1\n",
+      "        Lesson number : 0\n",
+      "        Reset Parameters :\n",
+      "\t\tgoal_speed -> 1.0\n",
+      "\t\tgoal_size -> 5.0\n",
+      "Unity brain name: ReacherBrain\n",
+      "        Number of Visual Observations (per agent): 0\n",
+      "        Vector Observation space type: continuous\n",
+      "        Vector Observation space size (per agent): 33\n",
+      "        Number of stacked Vector Observation: 1\n",
+      "        Vector Action space type: continuous\n",
+      "        Vector Action space size (per agent): 4\n",
+      "        Vector Action descriptions: , , , \n"
+     ]
+    }
+   ],
    "source": [
     "from unityagents import UnityEnvironment\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, we will start the environment!  **_Before running the code cell below_**, change the `file_name` parameter to match the location of the Unity environment that you downloaded.\n",
+    "import numpy as np\n",
     "\n",
-    "- **Mac**: `\"path/to/Reacher.app\"`\n",
-    "- **Windows** (x86): `\"path/to/Reacher_Windows_x86/Reacher.exe\"`\n",
-    "- **Windows** (x86_64): `\"path/to/Reacher_Windows_x86_64/Reacher.exe\"`\n",
-    "- **Linux** (x86): `\"path/to/Reacher_Linux/Reacher.x86\"`\n",
-    "- **Linux** (x86_64): `\"path/to/Reacher_Linux/Reacher.x86_64\"`\n",
-    "- **Linux** (x86, headless): `\"path/to/Reacher_Linux_NoVis/Reacher.x86\"`\n",
-    "- **Linux** (x86_64, headless): `\"path/to/Reacher_Linux_NoVis/Reacher.x86_64\"`\n",
+    "env = UnityEnvironment(file_name='Reacher_Linux/Reacher.x86')\n",
     "\n",
-    "For instance, if you are using a Mac, then you downloaded `Reacher.app`.  If this file is in the same folder as the notebook, then the line below should appear as follows:\n",
-    "```\n",
-    "env = UnityEnvironment(file_name=\"Reacher.app\")\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env = UnityEnvironment(file_name='...')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Environments contain **_brains_** which are responsible for deciding the actions of their associated agents. Here we check for the first brain available, and set it as the default brain we will be controlling from Python."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get the default brain\n",
+    "# Get the default brain\n",
     "brain_name = env.brain_names[0]\n",
-    "brain = env.brains[brain_name]"
+    "brain = env.brains[brain_name]\n",
+    "\n",
+    "# reset the environment\n",
+    "env_info = env.reset(train_mode=True)[brain_name]\n",
+    "\n",
+    "# number of agents\n",
+    "num_agents = len(env_info.agents)"
    ]
   },
   {
@@ -87,9 +76,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of agents: 1\n",
+      "Size of each action: 4\n",
+      "There are 1 agents. Each observes a state with length: 33\n",
+      "The state for the first agent looks like: [ 0.00000000e+00 -4.00000000e+00  0.00000000e+00  1.00000000e+00\n",
+      " -0.00000000e+00 -0.00000000e+00 -4.37113883e-08  0.00000000e+00\n",
+      "  0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "  0.00000000e+00  0.00000000e+00 -1.00000000e+01  0.00000000e+00\n",
+      "  1.00000000e+00 -0.00000000e+00 -0.00000000e+00 -4.37113883e-08\n",
+      "  0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "  0.00000000e+00  0.00000000e+00 -6.30408478e+00 -1.00000000e+00\n",
+      " -4.92529202e+00  0.00000000e+00  1.00000000e+00  0.00000000e+00\n",
+      " -5.33014059e-01]\n"
+     ]
+    }
+   ],
    "source": [
     "# reset the environment\n",
     "env_info = env.reset(train_mode=True)[brain_name]\n",
@@ -124,9 +132,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total score (averaged over agents) this episode: 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "env_info = env.reset(train_mode=False)[brain_name]     # reset the environment    \n",
     "states = env_info.vector_observations                  # get the current state (for each agent)\n",
@@ -154,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,9 +192,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "drlnd",
    "language": "python",
-   "name": "python3"
+   "name": "drlnd"
   },
   "language_info": {
    "codemirror_mode": {
