--- a/Tennis/Tennis.ipynb
+++ b/Tennis/Tennis.ipynb
@@ -17,80 +17,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:unityagents:\n",
+      "'Academy' started successfully!\n",
+      "Unity Academy name: Academy\n",
+      "        Number of Brains: 1\n",
+      "        Number of External Brains : 1\n",
+      "        Lesson number : 0\n",
+      "        Reset Parameters :\n",
+      "\t\t\n",
+      "Unity brain name: TennisBrain\n",
+      "        Number of Visual Observations (per agent): 0\n",
+      "        Vector Observation space type: continuous\n",
+      "        Vector Observation space size (per agent): 8\n",
+      "        Number of stacked Vector Observation: 3\n",
+      "        Vector Action space type: continuous\n",
+      "        Vector Action space size (per agent): 2\n",
+      "        Vector Action descriptions: , \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of agents: 2\n",
+      "Size of each action: 2\n",
+      "There are 2 agents. Each observes a state with length: 24\n",
+      "The state for the first agent looks like: [ 0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.         -6.65278625 -1.5\n",
+      " -0.          0.          6.83172083  6.         -0.          0.        ]\n"
+     ]
+    }
+   ],
    "source": [
     "from unityagents import UnityEnvironment\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, we will start the environment!  **_Before running the code cell below_**, change the `file_name` parameter to match the location of the Unity environment that you downloaded.\n",
+    "from collections import deque\n",
     "\n",
-    "- **Mac**: `\"path/to/Tennis.app\"`\n",
-    "- **Windows** (x86): `\"path/to/Tennis_Windows_x86/Tennis.exe\"`\n",
-    "- **Windows** (x86_64): `\"path/to/Tennis_Windows_x86_64/Tennis.exe\"`\n",
-    "- **Linux** (x86): `\"path/to/Tennis_Linux/Tennis.x86\"`\n",
-    "- **Linux** (x86_64): `\"path/to/Tennis_Linux/Tennis.x86_64\"`\n",
-    "- **Linux** (x86, headless): `\"path/to/Tennis_Linux_NoVis/Tennis.x86\"`\n",
-    "- **Linux** (x86_64, headless): `\"path/to/Tennis_Linux_NoVis/Tennis.x86_64\"`\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import utils.config \n",
+    "import pprint\n",
+    "import torch\n",
     "\n",
-    "For instance, if you are using a Mac, then you downloaded `Tennis.app`.  If this file is in the same folder as the notebook, then the line below should appear as follows:\n",
-    "```\n",
-    "env = UnityEnvironment(file_name=\"Tennis.app\")\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env = UnityEnvironment(file_name=\"...\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Environments contain **_brains_** which are responsible for deciding the actions of their associated agents. Here we check for the first brain available, and set it as the default brain we will be controlling from Python."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "env = UnityEnvironment(file_name=\"Tennis_Linux/Tennis.x86\")\n",
+    "\n",
     "# get the default brain\n",
     "brain_name = env.brain_names[0]\n",
-    "brain = env.brains[brain_name]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2. Examine the State and Action Spaces\n",
+    "brain = env.brains[brain_name]\n",
     "\n",
-    "In this environment, two agents control rackets to bounce a ball over a net. If an agent hits the ball over the net, it receives a reward of +0.1.  If an agent lets a ball hit the ground or hits the ball out of bounds, it receives a reward of -0.01.  Thus, the goal of each agent is to keep the ball in play.\n",
-    "\n",
-    "The observation space consists of 8 variables corresponding to the position and velocity of the ball and racket. Two continuous actions are available, corresponding to movement toward (or away from) the net, and jumping. \n",
-    "\n",
-    "Run the code cell below to print some information about the environment."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# reset the environment\n",
     "env_info = env.reset(train_mode=True)[brain_name]\n",
     "\n",
@@ -113,6 +95,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 2. Create instance of agent\n",
+    "\n",
+    "Agent's hyperparameters are saved and loaded from config.py file in utils folder. Current values are result of selected after hyperparameter tuing. But you can try different hyperparameter values if you want.\n",
+    "\n",
+    "If you just want to see the trained agent jump to cell 5.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from agents.maddpg_agent import MADDPG\n",
+    "\n",
+    "# Load parameters from file\n",
+    "hparams = utils.config.HYPERPARAMS['MADDPG']\n",
+    "params = utils.config.TRAINPARAMS['Tennis']\n",
+    "\n",
+    "# Create agent instance\n",
+    "agent = MADDPG(hparams)\n",
+    "print(\"Created agent with following hyperparameter values:\")\n",
+    "pprint.pprint(hparams)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3. Take Random Actions in the Environment\n",
     "\n",
     "In the next code cell, you will learn how to use the Python API to control the agents and receive feedback from the environment.\n",
@@ -124,13 +135,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.         -7.38993645 -1.5\n",
+      "  -0.          0.          6.83172083  5.99607611 -0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.         -6.70024681 -1.5\n",
+      "   0.          0.         -6.83172083  5.99607611  0.          0.        ]]\n",
+      "Score (max over agents) from episode 1: 0.09000000171363354\n",
+      "[[ 0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.         -6.24261761 -1.5\n",
+      "  -0.          0.          6.69487906  5.99607611 -0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.         -6.72329426 -1.5\n",
+      "   0.          0.         -6.69487906  5.99607611  0.          0.        ]]\n",
+      "Score (max over agents) from episode 2: 0.0\n",
+      "[[ 0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.         -7.08839989 -1.5\n",
+      "  -0.          0.          6.55063343  5.94114017 -0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.         -7.44412899 -1.5\n",
+      "   0.          0.         -6.55063343  5.94114017  0.          0.        ]]\n",
+      "Score (max over agents) from episode 3: 0.0\n",
+      "[[ 0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.         -6.61764145 -1.5\n",
+      "  -0.          0.          7.76153517  5.98822832 -0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.         -6.997437   -1.5\n",
+      "   0.          0.         -7.76153517  5.98822832  0.          0.        ]]\n",
+      "Score (max over agents) from episode 4: 0.0\n",
+      "[[ 0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.         -6.66271734 -1.5\n",
+      "  -0.          0.          6.04292488  5.99607611 -0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.         -7.9240942  -1.5\n",
+      "   0.          0.         -6.04292488  5.99607611  0.          0.        ]]\n",
+      "Score (max over agents) from episode 5: 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1, 6):                                      # play game for 5 episodes\n",
     "    env_info = env.reset(train_mode=False)[brain_name]     # reset the environment    \n",
     "    states = env_info.vector_observations                  # get the current state (for each agent)\n",
+    "    print(states)\n",
     "    scores = np.zeros(num_agents)                          # initialize the score (for each agent)\n",
     "    while True:\n",
     "        actions = np.random.randn(num_agents, action_size) # select an action (for each agent)\n",
@@ -138,7 +202,6 @@
     "        env_info = env.step(actions)[brain_name]           # send all actions to tne environment\n",
     "        next_states = env_info.vector_observations         # get next state (for each agent)\n",
     "        rewards = env_info.rewards                         # get reward (for each agent)\n",
-    "        dones = env_info.local_done                        # see if episode finished\n",
     "        scores += env_info.rewards                         # update the score (for each agent)\n",
     "        states = next_states                               # roll over states to next time step\n",
     "        if np.any(dones):                                  # exit loop if episode finished\n",
@@ -155,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,9 +240,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "drlnd",
    "language": "python",
-   "name": "python3"
+   "name": "drlnd"
   },
   "language_info": {
    "codemirror_mode": {
@@ -191,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
