feat: Implement MADDPG action

--- a/Tennis/Tennis.ipynb
+++ b/Tennis/Tennis.ipynb
@@ -17,46 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:unityagents:\n",
-      "'Academy' started successfully!\n",
-      "Unity Academy name: Academy\n",
-      "        Number of Brains: 1\n",
-      "        Number of External Brains : 1\n",
-      "        Lesson number : 0\n",
-      "        Reset Parameters :\n",
-      "\t\t\n",
-      "Unity brain name: TennisBrain\n",
-      "        Number of Visual Observations (per agent): 0\n",
-      "        Vector Observation space type: continuous\n",
-      "        Vector Observation space size (per agent): 8\n",
-      "        Number of stacked Vector Observation: 3\n",
-      "        Vector Action space type: continuous\n",
-      "        Vector Action space size (per agent): 2\n",
-      "        Vector Action descriptions: , \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of agents: 2\n",
-      "Size of each action: 2\n",
-      "There are 2 agents. Each observes a state with length: 24\n",
-      "The state for the first agent looks like: [ 0.          0.          0.          0.          0.          0.\n",
-      "  0.          0.          0.          0.          0.          0.\n",
-      "  0.          0.          0.          0.         -6.65278625 -1.5\n",
-      " -0.          0.          6.83172083  6.         -0.          0.        ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('../')\n",
+    "\n",
     "from unityagents import UnityEnvironment\n",
     "from collections import deque\n",
     "\n",
@@ -87,8 +54,7 @@
     "# examine the state space \n",
     "states = env_info.vector_observations\n",
     "state_size = states.shape[1]\n",
-    "print('There are {} agents. Each observes a state with length: {}'.format(states.shape[0], state_size))\n",
-    "print('The state for the first agent looks like:', states[0])"
+    "print('There are {} agents. Each observes a state with length: {}'.format(states.shape[0], state_size))"
    ]
   },
   {
@@ -108,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from agents.maddpg_agent import MADDPG\n",
+    "from agents.maddpg import MADDPG\n",
     "\n",
     "# Load parameters from file\n",
     "hparams = utils.config.HYPERPARAMS['MADDPG']\n",
@@ -135,78 +101,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.          0.          0.         -7.38993645 -1.5\n",
-      "  -0.          0.          6.83172083  5.99607611 -0.          0.        ]\n",
-      " [ 0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.          0.          0.         -6.70024681 -1.5\n",
-      "   0.          0.         -6.83172083  5.99607611  0.          0.        ]]\n",
-      "Score (max over agents) from episode 1: 0.09000000171363354\n",
-      "[[ 0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.          0.          0.         -6.24261761 -1.5\n",
-      "  -0.          0.          6.69487906  5.99607611 -0.          0.        ]\n",
-      " [ 0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.          0.          0.         -6.72329426 -1.5\n",
-      "   0.          0.         -6.69487906  5.99607611  0.          0.        ]]\n",
-      "Score (max over agents) from episode 2: 0.0\n",
-      "[[ 0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.          0.          0.         -7.08839989 -1.5\n",
-      "  -0.          0.          6.55063343  5.94114017 -0.          0.        ]\n",
-      " [ 0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.          0.          0.         -7.44412899 -1.5\n",
-      "   0.          0.         -6.55063343  5.94114017  0.          0.        ]]\n",
-      "Score (max over agents) from episode 3: 0.0\n",
-      "[[ 0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.          0.          0.         -6.61764145 -1.5\n",
-      "  -0.          0.          7.76153517  5.98822832 -0.          0.        ]\n",
-      " [ 0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.          0.          0.         -6.997437   -1.5\n",
-      "   0.          0.         -7.76153517  5.98822832  0.          0.        ]]\n",
-      "Score (max over agents) from episode 4: 0.0\n",
-      "[[ 0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.          0.          0.         -6.66271734 -1.5\n",
-      "  -0.          0.          6.04292488  5.99607611 -0.          0.        ]\n",
-      " [ 0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.          0.          0.         -7.9240942  -1.5\n",
-      "   0.          0.         -6.04292488  5.99607611  0.          0.        ]]\n",
-      "Score (max over agents) from episode 5: 0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for i in range(1, 6):                                      # play game for 5 episodes\n",
-    "    env_info = env.reset(train_mode=False)[brain_name]     # reset the environment    \n",
-    "    states = env_info.vector_observations                  # get the current state (for each agent)\n",
-    "    print(states)\n",
-    "    scores = np.zeros(num_agents)                          # initialize the score (for each agent)\n",
+    "# Reset and set environment to training mode\n",
+    "env_info = env.reset(train_mode=True)[brain_name]\n",
+    "\n",
+    "# Maximum number of training episodes\n",
+    "n_episodes = params['n_episodes']\n",
+    "\n",
+    "# List containing scores from each episode\n",
+    "scores = []\n",
+    "\n",
+    "# Store last 100 scores\n",
+    "scores_window = deque(maxlen=params['scores_window_size'])\n",
+    "\n",
+    "# Filename string\n",
+    "filename = \"{:s}_lra{:.0E}_lrc{:.0E}_batch{:d}_fc:{:d}:{:d}_solved{:d}\"\n",
+    "\n",
+    "# Train loop\n",
+    "for i_episode in range(1, n_episodes+1):\n",
+    "    # Reset environment\n",
+    "    env_info = env.reset(train_mode=True)[brain_name]\n",
+    "\n",
+    "    # Observe current state\n",
+    "    states = env_info.vector_observations\n",
+    "\n",
+    "    # Reset score\n",
+    "    agent_scores = np.zeros(num_agents)\n",
+    "\n",
+    "    # Loop each episode\n",
     "    while True:\n",
-    "        actions = np.random.randn(num_agents, action_size) # select an action (for each agent)\n",
-    "        actions = np.clip(actions, -1, 1)                  # all actions between -1 and 1\n",
-    "        env_info = env.step(actions)[brain_name]           # send all actions to tne environment\n",
-    "        next_states = env_info.vector_observations         # get next state (for each agent)\n",
-    "        rewards = env_info.rewards                         # get reward (for each agent)\n",
-    "        scores += env_info.rewards                         # update the score (for each agent)\n",
-    "        states = next_states                               # roll over states to next time step\n",
-    "        if np.any(dones):                                  # exit loop if episode finished\n",
+    "\n",
+    "        # Select action with e-greedy policy\n",
+    "        actions = agent.act(states)\n",
+    "\n",
+    "        # Take action\n",
+    "        env_info = env.step(actions)[brain_name]\n",
+    "\n",
+    "        # Observe the next state\n",
+    "        next_states = env_info.vector_observations\n",
+    "\n",
+    "        # Get the reward\n",
+    "        rewards = env_info.rewards\n",
+    "\n",
+    "        # Check if episode is finished\n",
+    "        dones = env_info.local_done\n",
+    "\n",
+    "        # Store experience\n",
+    "        #agent.step(states, actions, rewards, next_states, dones)\n",
+    "\n",
+    "        # State transition\n",
+    "        states = next_states\n",
+    "\n",
+    "        # Update total score\n",
+    "        agent_scores += rewards\n",
+    "        \n",
+    "        # Exit loop if episode finished\n",
+    "        if np.any(dones):                                  \n",
     "            break\n",
-    "    print('Score (max over agents) from episode {}: {}'.format(i, np.max(scores)))"
+    "            \n",
+    "    # Save most recent score\n",
+    "    scores_window.append(np.max(agent_scores))\n",
+    "    scores.append([np.max(agent_scores), np.mean(scores_window)])\n",
+    "\n",
+    "    # Decay epsilon\n",
+    "    #epsilon = max(params['epsilon_final'], params['epsilon_decay']*epsilon)\n",
+    "\n",
+    "    # Print learning progress\n",
+    "    print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)), end=\"\")\n",
+    "    if i_episode % params['scores_window_size'] == 0:\n",
+    "        print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)))\n",
+    "    if np.mean(scores_window)>=params['solve_score']:\n",
+    "        print('\\nEnvironment solved in {:d} episodes!\\tAverage Score: {:.2f}'.format(i_episode-100, np.mean(scores_window)))\n",
+    "        filename = filename.format(hparams['name'], hparams['lr_actor'], hparams['lr_critic'], hparams['batch_size'],\n",
+    "                                   hparams['fc1_units'], hparams['fc2_units'], i_episode-100)\n",
+    "        torch.save(agent.actor_local.state_dict(), 'models/{:s}_actor.pth'.format(filename))\n",
+    "        torch.save(agent.critic_local.state_dict(), 'models/{:s}_critic.pth'.format(filename))\n",
+    "        break"
    ]
   },
   {
@@ -218,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
