update MADDPG agent
Change MADDPG agent code to use MARL lab code as baseline.

--- a/Tennis/Tennis.ipynb
+++ b/Tennis/Tennis.ipynb
@@ -17,9 +17,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:unityagents:\n",
+      "'Academy' started successfully!\n",
+      "Unity Academy name: Academy\n",
+      "        Number of Brains: 1\n",
+      "        Number of External Brains : 1\n",
+      "        Lesson number : 0\n",
+      "        Reset Parameters :\n",
+      "\t\t\n",
+      "Unity brain name: TennisBrain\n",
+      "        Number of Visual Observations (per agent): 0\n",
+      "        Vector Observation space type: continuous\n",
+      "        Vector Observation space size (per agent): 8\n",
+      "        Number of stacked Vector Observation: 3\n",
+      "        Vector Action space type: continuous\n",
+      "        Vector Action space size (per agent): 2\n",
+      "        Vector Action descriptions: , \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of agents: 2\n",
+      "Size of each action: 2\n",
+      "There are 2 agents. Each observes a state with length: 24\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('../')\n",
@@ -72,18 +104,39 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created agent with following hyperparameter values:\n",
+      "{'action_size': 2,\n",
+      " 'agent_name': 'MADDPG',\n",
+      " 'batch_size': 128,\n",
+      " 'buffer_size': 1000000,\n",
+      " 'fc1_units': 128,\n",
+      " 'fc2_units': 150,\n",
+      " 'gamma': 0.999,\n",
+      " 'lr_actor': 0.001,\n",
+      " 'lr_critic': 0.001,\n",
+      " 'n_agents': 2,\n",
+      " 'random_seed': 0,\n",
+      " 'state_size': 24,\n",
+      " 'tau': 1e-05,\n",
+      " 'weight_decay': 0.0001}\n"
+     ]
+    }
+   ],
    "source": [
     "from agents.maddpg import MADDPG\n",
     "\n",
     "# Load parameters from file\n",
-    "hparams = utils.config.HYPERPARAMS['MADDPG']\n",
-    "params = utils.config.TRAINPARAMS['Tennis']\n",
+    "params = utils.config.HYPERPARAMS['Tennis']\n",
     "\n",
     "# Create agent instance\n",
-    "agent = MADDPG(hparams)\n",
+    "agent = MADDPG(params['agent'])\n",
     "print(\"Created agent with following hyperparameter values:\")\n",
-    "pprint.pprint(hparams)"
+    "pprint.pprint(params['agent'])"
    ]
   },
   {
