refactor: MADDPG agent
Move replay buffer to MADDPG from DDPG agent.

--- a/Tennis/Tennis.ipynb
+++ b/Tennis/Tennis.ipynb
@@ -34,7 +34,7 @@
     "import pprint\n",
     "import torch\n",
     "\n",
-    "env = UnityEnvironment(file_name=\"Tennis_Linux/Tennis.x86\", no_graphics=True)\n",
+    "env = UnityEnvironment(file_name=\"Tennis_Linux/Tennis.x86\", no_graphics=False)\n",
     "\n",
     "# get the default brain\n",
     "brain_name = env.brain_names[0]\n",
@@ -230,7 +230,7 @@
     "env_info = env.reset(train_mode=train_mode)[brain_name]\n",
     "\n",
     "# Load learned model weight. Load 'checkpoint' for optimal model\n",
-    "#filename = 'checkpoint'\n",
+    "filename = 'MADDPG_lra1E-03_lrc1E-03_tau6E-02_nstart5.0_nt400_solved546'\n",
     "agent.load(filename)\n",
     "\n",
     "# Number of episodes to run\n",
