chore: Enable graphics in Tennis.ipynb

--- a/Tennis/Tennis.ipynb
+++ b/Tennis/Tennis.ipynb
@@ -66,7 +66,7 @@
     "import pprint\n",
     "import torch\n",
     "\n",
-    "env = UnityEnvironment(file_name=\"Tennis_Linux/Tennis.x86\", no_graphics=True)\n",
+    "env = UnityEnvironment(file_name=\"Tennis_Linux/Tennis.x86\", no_graphics=False)\n",
     "\n",
     "# get the default brain\n",
     "brain_name = env.brain_names[0]\n",
