docs: Update docs
Fix typos in jupyter notebooks.
Add links to jupyter notebooks in README.

--- a/Reacher/Reacher.ipynb
+++ b/Reacher/Reacher.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "### 1. Start the Environment\n",
     "\n",
-    "We begin by importing some necessary packages and srarting Unity environment.  If the code cell below returns an error, please revisit the project instructions to double-check that you have installed necessary packages."
+    "We begin by importing some necessary packages and starting Unity environment.  If the code cell below returns an error, please revisit the project instructions to double-check that you have installed necessary packages."
    ]
   },
   {
@@ -175,7 +175,7 @@
     "    # Loop each episode\n",
     "    while not done:\n",
     "\n",
-    "        # Select action with e-greedy policy\n",
+    "        # Select action\n",
     "        action = agent.act(state)\n",
     "\n",
     "        # Take action\n",
@@ -280,7 +280,8 @@
    "metadata": {},
    "source": [
     "### 5. Watch smart agent\n",
-    "If you are skipped training, please specify filename for pre-trained network model."
+    "\n",
+    "If you skipped training and just want to see trained agent, specify filename for pre-trained network model."
    ]
   },
   {
