--- a/Tennis/Tennis.ipynb
+++ b/Tennis/Tennis.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Collaboration and Competition\n",
+    "# Tennis\n",
     "\n",
     "---\n",
     "\n",
-    "In this notebook, you will learn how to use the Unity ML-Agents environment for the third project of the [Deep Reinforcement Learning Nanodegree](https://www.udacity.com/course/deep-reinforcement-learning-nanodegree--nd893) program.\n",
+    "In this notebook, we will train MADDPG(Multi Agent Deep Deterministic Policy Gradient) agents to control rackets in Unity's Tennis environment.\n",
     "\n",
     "### 1. Start the Environment\n",
     "\n",
-    "We begin by importing the necessary packages.  If the code cell below returns an error, please revisit the project instructions to double-check that you have installed [Unity ML-Agents](https://github.com/Unity-Technologies/ml-agents/blob/master/docs/Installation.md) and [NumPy](http://www.numpy.org/)."
+    "We begin by importing some necessary packages and starting Unity environment. If the code cell below returns an error, please revisit the project instructions to double-check that you have installed necessary packages."
    ]
   },
   {
@@ -95,7 +95,7 @@
    "source": [
     "### 2. Create instance of agent\n",
     "\n",
-    "Agent's hyperparameters are saved and loaded from config.py file in utils folder. Current values are result of selected after hyperparameter tuing. But you can try different hyperparameter values if you want.\n",
+    "Agent's hyperparameters are saved and loaded from config.py file in utils folder. Current values were selected after coarse hyperparameter tuing. But you can try different hyperparameter values if you want.\n",
     "\n",
     "If you just want to see the trained agent jump to cell 5.\n"
    ]
@@ -309,7 +309,7 @@
    "source": [
     "### 5. Watch smart agent\n",
     "\n",
-    "If you are skipped training, please specify filename for pre-trained network model.\n"
+    "If you skipped training and just want to see trained agent, specify filename for pre-trained network model.\n"
    ]
   },
   {
